Changes include behind the scenes stuff for preferences and the tabs on the main chat window

--- a/Code/BestChat.Prefs.Data/BestChat.Prefs.Data.csproj
+++ b/Code/BestChat.Prefs.Data/BestChat.Prefs.Data.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Platform\Platform.DataLoc\Platform.DataLoc.csproj" />
-    <ProjectReference Include="..\Platform\Platform.Prefs\Platform.Prefs.csproj" />
+    <ProjectReference Include="..\Platform\Prefs\Platform.Prefs.Data\Platform.Prefs.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
