--- a/Code/Platform/Prefs/Platform.Prefs.Data/Platform.Prefs.Data.csproj
+++ b/Code/Platform/Prefs/Platform.Prefs.Data/Platform.Prefs.Data.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+		<UseWPF>False</UseWPF>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
