--- a/Code/Best Chat.GUI/Best Chat.GUI.csproj
+++ b/Code/Best Chat.GUI/Best Chat.GUI.csproj
@@ -21,9 +21,11 @@
 
   <ItemGroup>
     <PackageReference Include="CalcBinding" Version="2.5.2" />
+    <PackageReference Include="Emoji.Wpf" Version="0.3.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Platform.TreeData\Platform.TreeData.csproj" />
     <ProjectReference Include="..\Ctrls\BestChat.GUI.Ctrls.csproj" />
     <ProjectReference Include="..\IRC\Global\View\IRC.Global.View.csproj" />
     <ProjectReference Include="..\Platform\Platform.DataLoc\Platform.DataLoc.csproj" />
@@ -36,6 +38,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Update="Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
