--- a/Code/BestChat.Prefs.Ctrls/BestChat.Prefs.Ctrls.csproj
+++ b/Code/BestChat.Prefs.Ctrls/BestChat.Prefs.Ctrls.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
