--- a/Code/Ctrls/BestChat.GUI.Ctrls.csproj
+++ b/Code/Ctrls/BestChat.GUI.Ctrls.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Platform\Platform.Conversations\Platform.Conversations.csproj" />
     <ProjectReference Include="..\Platform\Util.Ext.WPF\Util.Ext.WPF.csproj" />
     <ProjectReference Include="..\Platform\Util\Util.csproj" />
   </ItemGroup>
