--- a/Code/IRC/Global/IRC.Global.View.Ctrls/IRC.Global.View.Ctrls.csproj
+++ b/Code/IRC/Global/IRC.Global.View.Ctrls/IRC.Global.View.Ctrls.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
