--- a/Code/IRC/Global/View/IRC.Global.View.csproj
+++ b/Code/IRC/Global/View/IRC.Global.View.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Platform\Prefs\Platform.Prefs.Ctrls\Platform.Prefs.Ctrls.csproj" />
     <ProjectReference Include="..\..\Data\IRC.Data.csproj" />
     <ProjectReference Include="..\IRC.Global.View.Ctrls\IRC.Global.View.Ctrls.csproj" />
     <ProjectReference Include="..\..\..\Platform\Util.Ext\Util.Ext.csproj" />
