--- a/Code/Platform/Prefs/Platform.Prefs.Ctrls/Platform.Prefs.Ctrls.csproj
+++ b/Code/Platform/Prefs/Platform.Prefs.Ctrls/Platform.Prefs.Ctrls.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>\bin</DocumentationFile>
-    <Copyright>2023</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,7 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\.editorconfig" Link=".editorconfig" />
+    <ProjectReference Include="..\..\..\Ctrls\BestChat.GUI.Ctrls.csproj" />
+    <ProjectReference Include="..\Platform.Prefs.Data\Platform.Prefs.Data.csproj" />
   </ItemGroup>
 
 </Project>
