--- a/Platform.TreeData/Platform.TreeData.csproj
+++ b/Platform.TreeData/Platform.TreeData.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0-windows</TargetFramework>
+		<UseWPF>true</UseWPF>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
+    <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>\bin</DocumentationFile>
-    <Copyright>2023</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\.editorconfig" Link=".editorconfig" />
+    <ProjectReference Include="..\Code\Platform\Common\Platform.Common.csproj" />
   </ItemGroup>
 
 </Project>
