--- a/Code/IRC/IRC.Protocol Module/IRC.Protocol Module.csproj
+++ b/Code/IRC/IRC.Protocol Module/IRC.Protocol Module.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0-windows</TargetFramework>
-		<UseWPF>true</UseWPF>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <RootNamespace>BestChat.IRC.Protocol_Module</RootNamespace>
     <Nullable>enable</Nullable>
+    <UseWPF>true</UseWPF>
+    <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
@@ -17,23 +18,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IRC\IRC.Protocol Module\IRC.Protocol Module.csproj" />
-    <ProjectReference Include="..\Platform\Platform.DataLoc\Platform.DataLoc.csproj" />
-    <ProjectReference Include="..\Platform\Prefs\Platform.Prefs.Data\Platform.Prefs.Data.csproj" />
+    <ProjectReference Include="..\..\..\BestChat.ProtocolMgr.GUI\BestChat.ProtocolMgr.GUI.csproj" />
+    <ProjectReference Include="..\..\Platform\Platform.Conversations\Platform.Conversations.csproj" />
+    <ProjectReference Include="..\Data\IRC.Data.csproj" />
+    <ProjectReference Include="..\Global\View\IRC.Global.View.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Resources.Designer.cs">
-      <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Resources.resx">
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
