--- a/Code/IRC/Global/IRC.Global.View.Ctrls/IRC.Global.View.Ctrls.csproj
+++ b/Code/IRC/Global/IRC.Global.View.Ctrls/IRC.Global.View.Ctrls.csproj
@@ -1,4 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</Project>
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
+    <UseWPF>true</UseWPF>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+
+</Project>
