--- a/Code/IRC/Global/View/IRC.Global.View.csproj
+++ b/Code/IRC/Global/View/IRC.Global.View.csproj
@@ -15,6 +15,7 @@
 		<ProjectReference Include="..\..\..\BestChat.GUI.Ctrls\BestChat.GUI.Ctrls.csproj" />
 		<ProjectReference Include="..\..\..\Platform\Prefs\Platform.Prefs.Ctrls\Platform.Prefs.Ctrls.csproj" />
 		<ProjectReference Include="..\..\Data\IRC.Data.csproj" />
+		<ProjectReference Include="..\IRC.Global.View.Ctrls\IRC.Global.View.Ctrls.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
