Still not working, though many issues have been fixed.

--- a/Code/BestChat.GUI.Ctrls/BestChat.GUI.Ctrls.csproj
+++ b/Code/BestChat.GUI.Ctrls/BestChat.GUI.Ctrls.csproj
@@ -22,8 +22,24 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Platform\Platform.Conversations\Platform.Conversations.csproj" />
+    <ProjectReference Include="..\Platform\Platform.DataLoc\Platform.DataLoc.csproj" />
     <ProjectReference Include="..\Platform\Util.Ext.WPF\Util.Ext.WPF.csproj" />
     <ProjectReference Include="..\Platform\Util\Util.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
