--- a/Code/Platform/Util.Collections/Util.Collections.csproj
+++ b/Code/Platform/Util.Collections/Util.Collections.csproj
@@ -4,6 +4,8 @@
 		<TargetFramework>net8.0-windows</TargetFramework>
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
+		<AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
+		<RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 	</PropertyGroup>
 
 </Project>
