--- a/Code/IRC/Global/IRC.Global.View.Ctrls/IRC.Global.View.Ctrls.csproj
+++ b/Code/IRC/Global/IRC.Global.View.Ctrls/IRC.Global.View.Ctrls.csproj
@@ -5,6 +5,13 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BestChat.GUI.Ctrls\BestChat.GUI.Ctrls.csproj" />
+    <ProjectReference Include="..\..\Data\IRC.Data.csproj" />
+  </ItemGroup>
 
 </Project>
