--- a/Code/Platform/Platform.Common/Platform.Common.csproj
+++ b/Code/Platform/Platform.Common/Platform.Common.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
 </Project>
