--- a/Code/Platform/Prefs/Platform.Prefs.Ctrls/Platform.Prefs.Ctrls.csproj
+++ b/Code/Platform/Prefs/Platform.Prefs.Ctrls/Platform.Prefs.Ctrls.csproj
@@ -4,8 +4,8 @@
 		<TargetFramework>net8.0-windows</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<AssemblyName>BestChat.$(MSBuildProjectName)</AssemblyName>
-		<RootNamespace>BestChat.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<AssemblyName>BestChat.Platform.Prefs.Ctrls</AssemblyName>
+		<RootNamespace>BestChat.Platform.Prefs.Ctrls</RootNamespace>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
 		<UseWPF>true</UseWPF>
@@ -24,5 +24,5 @@
 		<ProjectReference Include="..\..\Platform.DataLoc\Platform.DataLoc.csproj" />
 		<ProjectReference Include="..\..\Platform.TreeData\Platform.TreeData.csproj" />
 	</ItemGroup>
-	
+
 </Project>
